--- a/Asynchronous Programing and Promise/EX/05. Accordion/accordion.html
+++ b/Asynchronous Programing and Promise/EX/05. Accordion/accordion.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="accordion.css">
 </head>
 
-<body onLoad="solution()">
+<body>
     <section id="main">
         <!-- <div class="accordion">
             <div class="head">
