--- a/Data-and-Authentication/JS-Applications-Data-and-Authentication_HOMEWORK/04.Book-library/index.html
+++ b/Data-and-Authentication/JS-Applications-Data-and-Authentication_HOMEWORK/04.Book-library/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>Books</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
     <button id="loadBooks">LOAD ALL BOOKS</button>
     <table>
@@ -37,7 +39,7 @@
         </tbody>
     </table>
 
-    <form>
+    <form id="submit">
         <h3>FORM</h3>
         <label>TITLE</label>
         <input type="text" name="title" placeholder="Title...">
@@ -45,8 +47,17 @@
         <input type="text" name="author" placeholder="Author...">
         <button>Submit</button>
     </form>
+    <form style=display:none id="edit">
+        <h3>EDIT</h3>
+        <label>TITLE</label>
+        <input type="text" name="title">
+        <label>AUTHOR</label>
+        <input type="text" name="author">
+        <button>EDIT</button>
+    </form>
     <script src="./app.js"></script>
 </body>
+
 </html>
 
 <!--Feel free to change/update/modify the HTML Structure-->
