--- a/EXAM_PRE/JS Applications Retake Exam - 18 August 2020/ShoeShelf/JS_App_Retake_Resourses/index.html
+++ b/EXAM_PRE/JS Applications Retake Exam - 18 August 2020/ShoeShelf/JS_App_Retake_Resourses/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../public/styles.css">
     <link rel="icon" type="image/png" href="./public/favicon.png">
     <title>Shoe Shelf</title>
-    <script src="/src/app.js" type="module"></script>
+    <script src="./src/app.js" type="module"></script>
 </head>
 
 <body>
