--- a/08 Modular Application/01.Team-Manager/index.html
+++ b/08 Modular Application/01.Team-Manager/index.html
@@ -1,4 +1,20 @@
-.overlay { display: none; background-color: rgba(100, 100, 100, 0.5); backdrop-filter: blur(5px); position: fixed; left: 0; top: 0; width: 100%; height: 100%; z-index: 100; } .modal { background-color: white; color: black; width: 500px; text-align: center;
-margin: auto; margin-top: 15vh; padding: 32px; } .modal p { margin-bottom: 32px; }/body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./static/site.css">
+    <link rel="stylesheet" href="./static/layout.css">
+    <link rel="stylesheet" href="./static/modal.css">
+    <title>Team Manager</title>
+    <script src="/src/app.js" type="module"></script>
+</head>
+
+<body>
+    <div id="content"></div>
+
+</body>
 
 </html>
