--- a/EXAM_PRE/JS Applications Exam - 05 Apr 2020/SoftWiki_Ресурси/demo.html
+++ b/EXAM_PRE/JS Applications Exam - 05 Apr 2020/SoftWiki_Ресурси/demo.html
@@ -10,16 +10,16 @@
 
 <body id="root">
     <!-- Header -->
-    <header>
+    <!-- <header>
         <h1><a class="home" href="#/home">SoftWiki</a></h1>
         <nav class="nav-buttons">
             <a href="#/create">Create</a>
             <a href="#/logout">Logout</a>
             <a href="#/register">Register</a>
         </nav>
-    </header>
+    </header> -->
     <!-- Login -->
-    <div class="container auth">
+    <!-- <div class="container auth">
         <form action="#" method="">
             <fieldset>
                 <legend>Login</legend>
@@ -40,10 +40,10 @@
                 </p>
             </fieldset>
         </form>
-    </div>
+    </div> -->
 
     <!-- Register -->
-    <div class="container auth">
+    <!-- <div class="container auth">
         <form action="#" method="">
             <fieldset>
                 <legend>Register</legend>
@@ -68,29 +68,23 @@
                 </p>
             </fieldset>
         </form>
-    </div>
+    </div> -->
     <!-- No articles message -->
-    <h3 class="no-articles">No articles yet</h3>
+    <!-- <h3 class="no-articles">No articles yet</h3> -->
 
     <!-- Home -->
-    <div class="content">
+    <!-- <div class="content">
         <section class="js">
             <h2>JavaScript</h2>
             <div class="articles">
                 <article>
                     <h3>Arrays</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, excepturi magnam aliquid
-                        quamest fugit ipsa quidem
-                        impedit praesentium tempore placeat numquam blanditiis fuga soluta beatae perspiciatis voluptas
-                        atque obcaecati?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, excepturi magnam aliquid quamest fugit ipsa quidem impedit praesentium tempore placeat numquam blanditiis fuga soluta beatae perspiciatis voluptas atque obcaecati?</p>
                     <a href="#" class="btn details-btn">Details</a>
                 </article>
                 <article>
                     <h3>Objects</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, excepturi magnam aliquid
-                        quamest fugit ipsa quidem
-                        impedit praesentium tempore placeat numquam blanditiis fuga soluta beatae perspiciatis voluptas
-                        atque obcaecati?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, excepturi magnam aliquid quamest fugit ipsa quidem impedit praesentium tempore placeat numquam blanditiis fuga soluta beatae perspiciatis voluptas atque obcaecati?</p>
                     <a href="#" class="btn details-btn">Details</a>
                 </article>
             </div>
@@ -100,10 +94,7 @@
             <div class="articles">
                 <article>
                     <h3>Dictionary</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, excepturi magnam aliquid
-                        quamest fugit ipsa quidem
-                        impedit praesentium tempore placeat numquam blanditiis fuga soluta beatae perspiciatis voluptas
-                        atque obcaecati?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, excepturi magnam aliquid quamest fugit ipsa quidem impedit praesentium tempore placeat numquam blanditiis fuga soluta beatae perspiciatis voluptas atque obcaecati?</p>
                     <a href="#" class="btn details-btn">Details</a>
                 </article>
             </div>
@@ -113,9 +104,7 @@
             <div class="articles">
                 <article>
                     <h3>JDK</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, excepturi magnam aliquid
-                        quamest fugit ipsa quidem impedit praesentium tempore placeat numquam blanditiis fuga soluta
-                        beatae perspiciatis voluptas atque obcaecati?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, excepturi magnam aliquid quamest fugit ipsa quidem impedit praesentium tempore placeat numquam blanditiis fuga soluta beatae perspiciatis voluptas atque obcaecati?</p>
                     <a href="#" class="btn details-btn">Details</a>
                 </article>
             </div>
@@ -125,18 +114,15 @@
             <div class="articles">
                 <article>
                     <h3>Gjango</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, excepturi magnam aliquid
-                        quamest fugit ipsa quidem
-                        impedit praesentium tempore placeat numquam blanditiis fuga soluta beatae perspiciatis voluptas
-                        atque obcaecati?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, excepturi magnam aliquid quamest fugit ipsa quidem impedit praesentium tempore placeat numquam blanditiis fuga soluta beatae perspiciatis voluptas atque obcaecati?</p>
                     <a href="#" class="btn details-btn">Details</a>
                 </article>
             </div>
         </section>
-    </div>
+    </div> -->
 
     <!-- Create -->
-    <div class="container">
+    <!-- <div class="container">
         <form action="#" method="">
             <fieldset>
                 <legend>Create article</legend>
@@ -160,10 +146,10 @@
 
             </fieldset>
         </form>
-    </div>
+    </div> -->
 
     <!-- Edit -->
-    <div class="container">
+    <!-- <div class="container">
 
         <form action="#" method="">
             <fieldset>
@@ -188,7 +174,7 @@
 
             </fieldset>
         </form>
-    </div>
+    </div> -->
 
     <!-- Details -->
     <div class="container details">
