--- a/EXAM_PRE/JS Applications Retake Exam - 18 August 2020/ShoeShelf_v1.1/demo.html
+++ b/EXAM_PRE/JS Applications Retake Exam - 18 August 2020/ShoeShelf_v1.1/demo.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <nav>
             <ul>
@@ -29,7 +30,11 @@
             </ul>
         </nav>
     </header>
+
+    <!-- main -->
     <main>
+
+        <!-- home -->
         <div class="container">
             <div class="about-us">
                 <div>
@@ -73,7 +78,7 @@
                 <a>Buy it for $140,00</a>
             </div>
         </div>
-
+<!-- create -->
         <h1>Create New Offer</h1>
         <p class="message"></p>
         <form>
@@ -97,6 +102,8 @@
             </div>
         </form>
 
+
+        <!-- details -->
         <div class="offer-details">
             <h1>Under Armour HOVR</h1>
             <div class="info">
@@ -120,7 +127,7 @@
                 <span>You bought it</span>
             </div>
         </div>
-
+<!-- edit -->
         <h1>Edit Offer</h1>
         <p class="message"></p>
         <form>
@@ -143,7 +150,7 @@
                 <button>Edit</button>
             </div>
         </form>
-
+<!-- login -->
         <h1>Login</h1>
         <p class="form-info">Don't have account?
             <a href="../user/register.html">Register now</a> and fix that!
@@ -160,7 +167,7 @@
                 <button>Login</button>
             </div>
         </form>
-
+<!-- register -->
         <h1>Register</h1>
         <p class="form-info">Already registered?
             <a href="">Login now</a> and have some fun!
@@ -183,6 +190,8 @@
         </form>
 
     </main>
+
+    <!-- footer -->
     <footer>
         <p><a href="https://softuni.bg">Software University</a> - JS Applications @ 2020</p>
     </footer>
