--- a/EXAM_PRE/JS Applications Retake Exam - 18 August 2020/ShoeShelf_v1.1/index.html
+++ b/EXAM_PRE/JS Applications Retake Exam - 18 August 2020/ShoeShelf_v1.1/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="../public/styles.css">
     <link rel="icon" type="image/png" href="./public/favicon.png">
     <title>Shoe Shelf</title>
-    <script src="/src/app.js" type="modules"></script>
+    <script src="/src/app.js" type="module"></script>
 </head>
 
 <body>
-
+   
 </body>
 
 </html>
